<resources>
    <string name="app_name">ChessDroid</string>
    <string name="chessdroid">ChessDroid</string>
    <string name="one_player">One Player</string>
    <string name="two_players">Two Players</string>
    <string name="rules">Rules</string>
    <string name="king">King</string>
    <string name="queen">Queen</string>
    <string name="rook">Rook</string>
    <string name="bishop">Bishop</string>
    <string name="knight">Knight</string>
    <string name="pawn">Pawn</string>
    <string name="rules_start_game">Rules to Start Game</string>
    <string name="rules_end_game">Rules to End Game</string>
    <string name="rules_pawn">Rules of the Pawn</string>
    <string name="pawn_1">The pawn moves forward one square, but can\'t move backward.</string>
    <string name="pawn_2">On its first move, a pawn has the option to move two squares forward.</string>
    <string name="pawn_3">Pawns captures diagonally</string>
    <string name="pawn_4">En passant: If a pawn moves two squares forward from its starting position and lands next to an opponent\'s pawn, the opponent can capture the pawn as if it had moved only one square forward.</string>
    <string name="pawn_5">If a pawn reaches the opponent\'s back rank, it can be promoted to any other piece (except a king).</string>
    <string name="rules_bishop">Rules of the Bishop</string>
    <string name="bishop_1">The bishop moves diagonally any number of squares.</string>
    <string name="bishop_2">The bishop captures pieces by moving diagonally onto their square.</string>
    <string name="bishop_3">The bishop cannot jump over other pieces. It can only move to squares that are unoccupied or occupied by an opponent\'s piece that it can capture.</string>
    <string name="bishop_4">Bishops always stay on the same color square throughout the game (either light or dark).</string>
    <string name="rules_queen">Rules of the Queen</string>
    <string name="queen_1">The queen can move horizontally, vertically, or diagonally any number of squares.</string>
    <string name="queen_2">The queen captures pieces in the same way it moves.</string>
    <string name="queen_3">The queen can be blocked by pieces on its path..</string>
    <string name="game_end_4">Draw by Agreement: Players can agree to a draw if they both believe neither can win.</string>
    <string name="game_end_3">Resignation: A player can resign if they believe they have no chance of winning. This ends the game with the opponent winning.</string>
    <string name="game_end_2">Stalemate: The game ends in a draw when the player to move has no legal move and their king is not in check. The game is a draw because the player with the move has no legal move and their king is not in check.</string>
    <string name="game_end_1">Checkmate: The game ends when a player\'s king is in a position to be captured (in check) and there is no way to remove the threat (mate).</string>
    <string name="game_end_rules">Rules to End the Game</string>
    <string name="knight_move_expl1">The knight moves multiple squares each move. It either moves up or down one square vertically and over two squares horizontally OR up or down two squares vertically and over one square horizontally.</string>
    <string name="knight_move_expl2">Unlike any other piece, the knight can hop over other pieces. In the diagram below, White\'s knight on the b1-square can jump over the pawns on the second rank and move to the squares a3 or c3.</string>
    <string name="knight_move_expl3">A fork is when two or more pieces are attacked simultaneously. Even though this can be achieved by other pieces, the knight is the best-suited piece for this type of attack because it can attack multiple pieces that are more valuable than itself in a single move.</string>
    <string name="r_king_header">Rules of the King</string>
    <string name="kingrule_1">The king is less powerful than almost every chess piece, but it is also unique: the king is the only piece that can never be captured!</string>
    <string name="kingrule_2">The king\'s movement is limited compared to other chess pieces. It can move one square in any direction. In the following position, the king can move to any of the highlighted squares.</string>
    <string name="kingrule_3">When a king is attacked, it is in check. A king cannot move into check (that is considered an illegal move), and if a king is put in check, it must get out of check.</string>
    <string name="castlerule_1">Castling involves the king and a rook. As mentioned, there are many rules to castling: The first is that you may only castle if you haven\'t moved your king and your rook (on the side where you want to castle). The second rule is that no piece can be between your king and the rook on the side where you want to castle.</string>
    <string name="gamestart_header">Game Start Rules</string>
    <string name="gamestart_rule_1">On first move, the pawns and knight are the only pieces that can be moved because the other pieces are blocked by the pawns, and the knight can jump over other pieces.</string>
    <string name="gamestart_rule_2">During a pawn\'s first move, it can either go forward 1 step or two.</string>
    <string name="gamestart_rule_3">The knight can be moved on move 1 because it is the only pieces on the board that can jump over pieces.</string>
    <string name="gamestart_rule_4">After freeing up the space in front or beside the other chess pieces, the rest of the pices can move around the board depending on their defined moveset rules.</string>
    <string name="knightrules_header">Rules of the Knight</string>
    <string name="rookrules_header">Rules of the Rook</string>
    <string name="rookrule_1">Can move as many squares as it likes left or right horizontally, or as many squares as it likes up or down vertically (as long as it isn\'t blocked by other pieces)</string>
    <string name="rookrule_2">Unlike the bishop or a knight, a single rook can checkmate with the help of a king alone. In the following position, White has just played Rb8#! Please note that the white king on the f6-square takes away any forward moves from Black\'s king, while the rook takes away any moves on the eighth rank.</string>
    <string name="rookrule_3">Two rooks can deliver checkmate against a lone king very easily. In the following position, White has just played Ra8#. Please note that the rook on b7 keeps the black king from moving forward, while the rook on a8 takes away any moves on the eighth rank.</string>
</resources>