<?xml version="1.0" encoding="utf-8"?>
<!-- Homer s00045809-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#F5F5F5">

    <TextView
        android:id="@+id/tvKRHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/knightrules_header"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_marginBottom="16dp"/>

    <!-- Rule 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginBottom="16dp">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/horsemoves1"
            android:scaleType="fitCenter"
            android:layout_marginEnd="16dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/knight_move_expl1"
            android:textSize="16sp"
            android:textColor="#000000"/>

    </LinearLayout>

    <!-- Rule 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginBottom="16dp">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/knightmoves2"
            android:scaleType="fitCenter"
            android:layout_marginEnd="16dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/knight_move_expl2"
            android:textSize="16sp"
            android:textColor="#000000"/>

    </LinearLayout>
    <!-- Rule 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginBottom="16dp">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/knightmoves3"
            android:scaleType="fitCenter"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/knight_move_expl3"
            android:textSize="16sp"
            android:textColor="#000000"/>

    </LinearLayout>



</LinearLayout>